agregadas clases puntuacion y usuario, modificado clase reservation, CRUDS basicos establecidos